--- a/index.html
+++ b/index.html
@@ -41,8 +41,12 @@
 	<div class="container">
 		<img src="images/logo-purium.png" class="img-fluid center-block">
 	  <hr />
-		<h1 class="text-w300 text-green text-roboto-slab text-uppercase main-heading">CBD+</h1>
-		<h2 class="text-roboto-condensed sub-heading"><em>Your Path to Wellness</em></h2>
+    <div>
+
+    </div>
+		<h1 class="text-w300 text-green text-roboto-slab text-uppercase main-heading">CBD+ Green Friday Special!</h1>
+    <h2 class="text-roboto-condensed sub-heading"><em>Buy 1 Get 1 Free • CBD+ Peppermint</em></h2>
+    <p class="text-roboto-condensed paragraph"><em>Limited Time Offer • While Supplies Lasts</em></p>
 		<div class="row">
 			<div class="col-sm-10 offset-1">
 				<div class="embed-responsive embed-responsive-16by9">
@@ -113,8 +117,8 @@
             <div class="flex-column col-sm-8 align-self-center text-left">
             	<ul class="list-unstyled text-left list-check">
                 	  <li>1500 mg megadose of high quality CBD</li>
-                    <li>$79 with a Gift Card​​​​​ ($129 Retail​​​​​​​)</li>
-                    <li>$96.75 for Loyal Customers​​​​</li>
+                    <li>$50 with a Gift Card​​​​​ ($100 Retail​​​​​​​)</li>
+                    <li>$75 for Loyal Customers​​​​</li>
                     <li>Free shipping and handling</li>
                 </ul>
                 <a href="https://store.puriumcbd.com/cbd.html" class="btns btn-green custom-btns text-white text-uppercase">BUY NOW</a>
